--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
     <div class="container h-700">
       <div class="row">
         <div class="col-12" style="margin-top: 2rem">
-          <h1 class="text-center">Voice Assistant</h1>
+          <h1 class="text-center">oice Assistant</h1>
           <p class="text-center" style="font-size: 20px">
             Your personal assistant powered by OpenAI's GPT model and Watson's
             Text-to-Speech & Speech-to-Text
