--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
     <div class="container h-700">
       <div class="row">
         <div class="col-12" style="margin-top: 2rem">
-          <h1 class="text-center">oice Assistant</h1>
+          <h1 class="text-center">Voice Assistant</h1>
           <p class="text-center" style="font-size: 20px">
             Your personal assistant powered by OpenAI's GPT model and Watson's
             Text-to-Speech & Speech-to-Text
@@ -28,8 +28,7 @@
         </div>
         <div class="col-12" style="font-size: 16px">
           <p class="text-center mb-4">
-            Try asking: What can you specifically do? Type in your question or
-            record it by clicking the microphone!
+            Type in your question or record it by clicking the microphone!
           </p>
         </div>
         <div class="col-12 text-center d-flex justify-content-around">
